--- a/dario/CSS/style.css
+++ b/dario/CSS/style.css
@@ -12,10 +12,29 @@ body {
   grid-template-rows: 50px 30px auto 60px;
 }
 nav {
+
   background-color: rgb(55, 178, 209);
   height: 100%;
   grid-column: 1 / 4;
   grid-row: 1;
+}
+nav a{
+  padding-top: 5px;
+  margin-top:3px;
+  display: inline-block;
+  background-color: rgb(0, 146, 165);
+  height: 30px;
+  width: 180px;
+  text-decoration: none;
+  color: black;
+  border-style: groove;
+  border-radius: 10px;
+  border-color: rgb(1, 75, 85);;
+  text-align: center;
+  
+}
+nav a:hover{
+  background-color: rgb(2, 105, 119);
 }
 h1 {
   margin-left: auto;
